# cs277_final_project

./: 271_FinalProject (1).ipynb  271_FinalProject (2).ipynb  271_FinalProject.ipynb  CS_277_Final_Project.ipynb  RQ1_OpenCLIP_KNN_RQ2_ToneAwareKNN.ipynb  knn_colab.ipynb  main.py  pyproject.toml  subset_with_embeddings.csv
