[project]
name = "cs277-final-project"
version = "0.1.0"
description = "Derm Foundation embedding + zero-shot classification pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "tensorflow>=2.15",
    "huggingface-hub>=0.20",
    "pillow>=10.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "gdown>=5.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "black",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
